# lane_line_detection

./: CMakeLists.txt  Doxyfile  README.md  package.xml
cfg/: FilterParams.cfg  lane_detection.rviz
include/lane_line_detection/: filter_types.h  lane_line_detection.h  least_squares.h  line_type.h  ros_interface.h
launch/: bag.launch  camera.launch  lane_line_detection.launch  test.launch
msg/: LaneLine.msg  LaneLines.msg
params/: calibration.yaml  params.yaml
src/: lane_line_detection.cpp  least_squares.cpp  ros_interface.cpp  ros_interface_node.cpp
test/: lane_line_detection_test.cpp
